tests/compile_fail/invalid_align_attr.stderr
error: expected attribute arguments in parentheses: `shader(align(...))`
 --> tests/compile_fail/invalid_align_attr.rs:7:7
  |
7 |     #[shader(align)]
  |       ^^^^^^^^^^^^

error: expected a power of 2 u32 literal
 --> tests/compile_fail/invalid_align_attr.rs:9:20
  |
9 |     #[shader(align())]
  |                    ^

error: expected a power of 2 u32 literal
  --> tests/compile_fail/invalid_align_attr.rs:11:20
   |
11 |     #[shader(align(invalid))]
   |                    ^^^^^^^

error: expected a power of 2 u32 literal
  --> tests/compile_fail/invalid_align_attr.rs:13:21
   |
13 |     #[shader(align(3))]
   |                     ^
